complete home page

--- a/src/styles/home_styles/BetterOverview.module.scss
+++ b/src/styles/home_styles/BetterOverview.module.scss
@@ -81,7 +81,7 @@
 }
 
 .greenBoldBetter {
-  color: #2ecc71; /* Green color for the word "Better" */
+  color: #014b35; /* Green color for the word "Better" */
   font-weight: bold; /* Make the word "Better" bold */
 }
 
