--- a/src/styles/home_styles/HeroSection.module.scss
+++ b/src/styles/home_styles/HeroSection.module.scss
@@ -15,7 +15,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(to bottom, #14532d, #15803d, #16a34a);
+  background: linear-gradient(to bottom, #014b35,#0a4e24, #1c6838, );
   z-index: 0;
 }
 
