--- a/src/styles/home_styles/Navbar.module.scss
+++ b/src/styles/home_styles/Navbar.module.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  background-color: #16a34a;
+  background-color: #014b35;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
