--- a/src/styles/home_styles/Stories.module.scss
+++ b/src/styles/home_styles/Stories.module.scss
@@ -56,12 +56,12 @@
   transition: all 0.3s ease;
 
   &:hover {
-    border-color: #2ecc71;
+    border-color: #014b35;
   }
 
   &.active {
-    border-color: #2ecc71;
-    color: #2ecc71;
+    border-color: #014b35;
+    color: #014b35;
     box-shadow: 0 0 0 2px rgba(46, 204, 113, 0.3);
   }
 }
@@ -92,7 +92,7 @@
 }
 
 .storiesButton {
-  background-color: #2ecc71;
+  background-color: #014b35;
   color: white;
   border: none;
   padding: 18px 30px;
@@ -104,7 +104,7 @@
   margin-bottom: 10px;
 
   &:hover {
-    background-color: #27ae60;
+    background-color: #014b35;
   }
 }
 
@@ -118,7 +118,7 @@
 }
 
 .starIcon {
-  color: #2ecc71;
+  color: #014b35;
   font-size: 1.8rem;
   line-height: 1;
 }
